<resources>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_home">首页</string>
    <string name="main_around">附近</string>
    <string name="main_chat">会话</string>
    <string name="have_goods_hint">货源搜索</string>
    <string name="have_car_hint">车源搜索</string>
    <string name="select_city_hint">选择城市</string>
    <string name="information_publish_hint">信息发布</string>
    <string name="insurance_hint">货运担保</string>
    <string name="tab_publish_car">发布车源</string>
    <string name="tab_publish_goods">发布货源</string>
    <string name="tab_publish_line">发布专线</string>
    <string name="tab_insurance_accound">账号余额</string>
    <string name="tab_insurance_transportinfo">运输信息</string>
    <string name="tab_insurance_insuranceinfo">保险信息</string>
    <string name="tab_insurance_goodsinfo">货物信息</string>
    <string name="tab_insurance_assurer">被保险人</string>
    <string name="tab_around_car">附近车源</string>
    <string name="tab_around_goods">附近货源</string>
    <string name="tab_around_friends">附近朋友</string>
    <string name="tab_personal_information">个人中心</string>
    <string name="tab_personal_owner_information">我的资料</string>
    <string name="goods_list_hint">货源列表</string>
    <string name="car_list_hint">货源列表</string>
    <string name="search_car_type_hint">车型搜索</string>
    <string name="search_car_length_hint">车长搜索</string>
    <string name="search_goods">货源搜索</string>
    <string name="Secend_Back_hint">在按一次退出程序</string>
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="retry">重发</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>
    <string name="SubjoinInsurance_Value">公路货物运输保险附加盗窃、抢劫保险条款（2009版）</string>
    <string name="SubjoinInsurance_Key">002</string>
    <string name="pull_to_refresh_pull_label" />
    <string name="pull_to_refresh_release_label">更新列表数据…</string>
    <string name="pull_to_refresh_refreshing_label">正在加载数据…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">物托帮(订单中心专版)</string>
    <string name="copyright">Copyright 2013-2014 sy56.com</string>
    <string name="all_rights">All Rights Reserved.</string>
    <string name="NETWORK_TOAST">您的网络不给力，请您稍后在试，或更换网络连接</string>
    <string name="SERVER_TOAST">请求服务器失败！</string>
    <string name="service_busy">抱歉，服务器繁忙，请稍后再试</string>
    <string name="MainTabTile_HomePage">首页</string>
    <string name="MainTabTile_Publish">发布</string>
    <string name="MainTabTile_AddressBook">物流圈</string>
    <string name="MainTabTile_Individual">我的</string>
    <string name="MainTabTile_Publish_save">保存</string>
    <string name="MainTabTile_Update">更新</string>
    <string name="HomeRectTitle_CarSource">找车源</string>
    <string name="HomeRectTitle_FineLine">零担专线</string>
    <string name="HomeRectTitle_vehicle">整车调度</string>
    <string name="HomeRectTitle_Credit">信用标普</string>
    <string name="HomeRectTitle_Credit_rating">信用等级</string>
    <string name="HomeRectTitle_HotSpot">物流热点</string>
    <string name="HomeRectTitle_VerifyPositioning">物流助手</string>
    <string name="HomeRectTitle_GoodsSource">找货源</string>
    <string name="HomeRectTitle_Insurance">在线投保</string>
    <string name="HomeRectTitle_TransportPrices">运输价格</string>
    <string name="HomeRectTitle_Paypal">在线充值</string>
    <string name="logistics_provider">物流商</string>
    <string name="HomeRectTitle_FineCar">整车调度</string>
    <string name="PublishTab_Cars">发布车源</string>
    <string name="PublishTab_Goods">发布货源</string>
    <string name="PublishTab_Line">发布专线</string>
    <string name="PublishInfo_CarInfo">车源信息</string>
    <string name="driving_license_CarInfo">行驶证信息</string>
    <string name="PublishInfo_CarNumber">车牌号码</string>
    <string name="PublishInfo_CarNumber_Hint">*如：粤A12345</string>
    <string name="PublishInfo_ExpectedFlow">期望流向</string>
    <string name="PublishInfo_ExpectedFlow_Hint">*选择期望流向</string>
    <string name="PublishInfo_CarTypes">车辆类型</string>
    <string name="PublishInfo_CarTypes_Hint">*选择车辆类型</string>
    <string name="PublishInfo_Carlen">车辆长度</string>
    <string name="PublishInfo_Carlen_Hint">*选择车辆长度(单位.米)</string>
    <string name="PublishInfo_CarWeight_Hint">*选择载重</string>
    <string name="PublishInfo_CarLoad">车辆载重</string>
    <string name="PublishInfo_DriverName">司机姓名</string>
    <string name="PublishInfo_DriverNameHint">*请输入司机姓名</string>
    <string name="PublishInfo_DirvePhone">司机手机</string>
    <string name="PublishInfo_DirvePhoneHint">*请输入司机手机</string>
    <string name="PublishInfo_OwnersName">车主姓名</string>
    <string name="PublishInfo_DrivingLicenseTpye">驾照类型</string>
    <string name="PublishInfo_DriverNameDrivingAge">司机驾龄</string>
    <string name="PublishInfo_OwnersPhone">车主手机</string>
    <string name="PublishInfo_OwnersPhoneHint">*请输入车主手机</string>
    <string name="PublishInfo_CurrentPosition">目前位置</string>
    <string name="PublishInfo_CurrentPosition_Hint">选择目前位置</string>
    <string name="PublishInfo_CarStatus">车辆状态</string>
    <string name="PublishInfo_CarStatus_Hint">*选择车辆状态</string>
    <string name="PublishInfo_CarSourceType">车源类型</string>
    <string name="PublishInfo_CarSourceType_Hint">*选择车源类型</string>
    <string name="PublishInfo_JauntCar">短途车源</string>
    <string name="PublishInfo_Goods">货源信息</string>
    <string name="PublishInfo_GoodsName">货物名称</string>
    <string name="PublishInfo_GoodsName_Hint">*如：木材</string>
    <string name="PublishInfo_GoodsType">货物类型</string>
    <string name="PublishInfo_GoodsType_Hint">*选择货物类型</string>
    <string name="PublishInfo_TransportMode">运输方式</string>
    <string name="PublishInfo_TransportMode_Hint">选择运输方式</string>
    <string name="PublishInfo_GoodsWeight">货物重量</string>
    <string name="PublishInfo_GoodsWeight_Hint">*单位：吨</string>
    <string name="PublishInfo_GoodsBulk">货物体积</string>
    <string name="PublishInfo_EffectiveDate">有效日期</string>
    <string name="PublishInfo_EffectiveDateHint">*单位：天</string>
    <string name="PublishInfo_EffectiveDateHint2">*请选择有效日期</string>
    <string name="PublishInfo_GoodsBulk_Hint">*单位：方</string>
    <string name="PublishInfo_CasType_Hint">*选择车型</string>
    <string name="PublishInfo_CasLength_Hint">*单位：米</string>
    <string name="PublishInfo_TransportInfo">运输信息</string>
    <string name="PublishInfo_Origin">始发地</string>
    <string name="PublishInfo_Origin_Hint">*选择始发地</string>
    <string name="PublishInfo_Destination">目的地</string>
    <string name="PublishInfo_Destination_Hint">*选择目的地</string>
    <string name="PublishInfo_ShipDate">发货日期</string>
    <string name="PublishInfo_ExpectFreight">期望运费</string>
    <string name="PublishInfo_ExpectFreight_number">货物编号</string>
    <string name="PublishInfo_ExpectFreight_Hint">*单位：元</string>
    <string name="PublishInfo_ContactInfo">联系信息</string>
    <string name="PublishInfo_Contact">联系人</string>
    <string name="PublishInfo_CompanyName">公司名称</string>
    <string name="PublishInfo_seatNo">席位号</string>
    <string name="PublishInfo_Tel">联系电话</string>
    <string name="PublishInfo_Remark">备注</string>
    <string name="PublishInfo_Remark_Hint">选填</string>
    <string name="PublishInfo_DriverNameDrivingAge_Hint">单位：年</string>
    <string name="shipper_type">货主类型</string>
    <string name="company">公司</string>
    <string name="hint_msg">您发的货源已提交,我们的调车人员会尽快为您的货物调度车辆,若有问题请咨询：4008887771.</string>
    <string name="PublishLine_CompanyNameHint">*请输入公司名称</string>
    <string name="PublishLine_PersonChargeHint">*请输入负责人</string>
    <string name="PublishLine_PhoneNumberHint">*请输入手机号码</string>
    <string name="PublishLine_HeadquartersAddressHint">*请选择总部地址</string>
    <string name="PublishLine_HeadquartersAddress">总部地址</string>
    <string name="PublishLine_OriginHint">*请选择始发地地址</string>
    <string name="PublishLine_Origin">始发地地址</string>
    <string name="PublishLine_OriginatingContactHint">*请填写始发地联系人</string>
    <string name="PublishLine_OriginatingContactMobileHint">*请填写手机号码</string>
    <string name="PublishLine_Destination">目的地地址</string>
    <string name="PublishLine_DestinationHint">*请选择目的地地址</string>
    <string name="CustomerServiceTel_Title">4008887771</string>
    <string name="AccountBalance_Title">账户余额</string>
    <string name="Paypal_Title">支付宝充值</string>
    <string name="Hire_Title">月租服务</string>
    <string name="InfoManage_Title">我的资料</string>
    <string name="Personal_MyCarSource_Title">我的车源</string>
    <string name="Personal_ExpenseCalendar_Title">我的消费</string>
    <string name="Personal_MyGoodsSource_Title">我的货源</string>
    <string name="MyLine_Title">我的专线</string>
    <string name="MyCollect_Title">我的收藏</string>
    <string name="Help_Title">帮助中心</string>
    <string name="Feedback_Title">问题反馈</string>
    <string name="About_Title">关于我们</string>
    <string name="help_title">产品帮助</string>
    <string name="OnlineUpgrade_Title">在线升级</string>
    <string name="MyInformation">我的资料</string>
    <string name="about_logisitics">关于我要物流</string>
    <string name="update_password">修改密码</string>
    <string name="setting">设置</string>
    <string name="no_login_hint">你还没有登陆，请先登陆/注册</string>
    <string name="login_hint">使用该功能,请先登录!</string>
    <string name="Contact_Search_Hint">搜索</string>
    <string name="SelectCity_Title">选择城市</string>
    <string name="CustomerService_Tel">4008887771</string>
    <string name="SearchCar_Title">车源搜索</string>
    <string name="SearchCar_Location_Title">始发地</string>
    <string name="SearchCar_Location_Hint">请选择位置</string>
    <string name="SearchCar_Destination_Tile">期望流向</string>
    <string name="SearchCar_Destination_Hint">请选择期望流向</string>
    <string name="SearchCar_License_Number_Hint">请输入车牌号码</string>
    <string name="SearchCar_License_Number">车牌号码</string>
    <string name="register_get_authcode_btntext">获取验证码</string>
    <string name="register_input_code_title">验证码</string>
    <string name="register_input_code_hint">输入6位数字验证码</string>
    <string name="email_address_hint">邮箱地址</string>
    <string name="input_email_address_hint">请输入邮箱地址</string>
    <string name="submit_certification_hint">提交认证</string>
    <string name="dispatch_number_hint">调度单号:%1$s</string>
    <string name="vehicle_hint">车辆:</string>
    <string name="vehicle_type_hint">车型:</string>
    <string name="total_package_hint">总件数:</string>
    <string name="total_volume_hint">总体积:</string>
    <string name="total_weight_hint">总净重:</string>
    <string name="main_driver_hint">主驾驶:</string>
    <string name="copilot_hint">副驾驶:</string>
    <string name="order_number">订单号:%1$s</string>
    <string name="working_order_number">作业单号:</string>
    <string name="goods_owner_hint">货主:</string>
    <string name="goods_from_address_hint">装货详细地址:</string>
    <string name="goods_to_address_hint">收货详细地址:</string>
    <string name="earliset_arrival_time_hint">最早应到货日期:</string>
    <string name="lastest_arrival_time_hint">最晚应到货日期:</string>
    <string name="goods_number_piece_hint">%1$d件</string>
    <string name="stere_hint">%1$sm³</string>
    <string name="kg_hint">%1$skg</string>
    <string name="arrival_goods_hint2">全部到货</string>
</resources>