<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/maintitle_background"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_tab_assurer"
                style="@style/information_tab_bottom"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="2.0dip"
                android:layout_marginTop="2.0dip"
                android:checked="true"
                android:text="@string/tab_insurance_assurer" />

            <RadioButton
                android:id="@+id/radio_tab_goodsinfo"
                style="@style/information_tab_bottom"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="2.0dip"
                android:layout_marginTop="2.0dip"
                android:checked="false"
                android:text="@string/tab_insurance_goodsinfo" />

            <RadioButton
                android:id="@+id/radio_tab_insuranceinfo"
                style="@style/information_tab_bottom"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="2.0dip"
                android:layout_marginTop="2.0dip"
                android:checked="false"
                android:text="@string/tab_insurance_insuranceinfo" />

            <RadioButton
                android:id="@+id/radio_tab_transportinfo"
                style="@style/information_tab_bottom"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="2.0dip"
                android:layout_marginTop="2.0dip"
                android:checked="false"
                android:text="@string/tab_insurance_transportinfo" />

            <RadioButton
                android:id="@+id/radio_tab_accountinfo"
                style="@style/information_tab_bottom"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="2.0dip"
                android:layout_marginTop="2.0dip"
                android:checked="false"
                android:text="@string/tab_insurance_accound" />
        </RadioGroup>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
    </LinearLayout>

</TabHost>