<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_tab_around_car"
                style="@style/information_tab_bottom"
                android:checked="true"
                android:onClick="onTabClicked"
                android:text="@string/tab_around_car" />

            <RadioButton
                android:id="@+id/radio_tab_around_goods"
                style="@style/information_tab_bottom"
                android:checked="false"
                android:onClick="onTabClicked"
                android:text="@string/tab_around_goods" />

            <RadioButton
                android:id="@+id/radio_tab_around_friends"
                style="@style/information_tab_bottom"
                android:checked="false"
                android:onClick="onTabClicked"
                android:text="@string/tab_around_friends" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/fragment_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

</LinearLayout>